# ai-trading-signals

./: .env.example  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: backtest.py  indicators.py  lstm_model.py  main.py
tests/: test_indicators.py
