[metadata]
name = ai-trading-signals
version = 1.0.0
author = Nanba
author_email = nanba@example.com
description = AI-powered trading signals bot
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    tensorflow>=2.13.0
    python-binance>=1.0.19
    requests>=2.31.0
    python-dotenv>=1.0.0
